# S2S_ExtremeWeather

./: .gitignore  CLAUDE.md  HANDOFF.md  LEARNING_CHECKLIST.md  README.md  _build_nb.py  convert_vayuh_h5.py  find_p90_t2m_events.py  gencast_extreme_events_ensemble.ipynb  make_xres_figs.sh  run_experiment.py  run_heatwave2026.py  run_xres.py  setup_env.sh  t2m_diagnostics_colab.ipynb  true.e6651081
docs/: climate_ml_primer.html  (+1 more)
downscaler/: README.md  pyproject.toml  train.py
downscaler/bash/: 00_preflight.sh  01_smoke.sh  02_build_index_and_stats.sh  03_train.sh  04_stop.sh  05_status.sh  README.md
downscaler/configs/: config.yaml
downscaler/configs/data/: era5_hrrr.yaml
downscaler/data/: dataloader.py  dummy.py  era5_hrrr_dataset.py  normalization.py  wind_rotation.py
downscaler/docs/: architecture.html  era5_variables.html  hyperparameters.md  model_reference.html  variables.md
downscaler/evaluation/: downscale.py  sampler.py
downscaler/metrics/: train_metrics.jsonl
downscaler/model/: attention.py  blocks.py  ema.py  preconditioning.py  unet.py
downscaler/scripts/: compare_timestep.py  plot_metrics.py  precompute_stats.py  xres_downscale_demo.py  xres_pdf_qgstyle.py
downscaler/slurm/: README.md  smoke.sbatch  stop.sh  train.sbatch  worker.sh  xres_downscale_infer.sbatch
downscaler/tests/: test_attention.py  test_metrics_logger.py  test_model.py  test_regrid.py  test_smoke.py  test_var_spec.py  test_variable_weighting.py  test_wind_rotation.py
downscaler/training/: loss.py  metrics_logger.py  sigma_sampler.py  trainer.py  variable_weighting.py
(+173 files in other folders)
